# RoxEngine

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
RoxEngine/: CMakeLists.txt
RoxEngine/src/Platform/Vulkan/: VBuffers.cpp  VBuffers.h  VCommandBuffer.cpp  VCommandBuffer.h  VFramebuffer.cpp  VFramebuffer.h  VGraphicsPipeline.cpp  VGraphicsPipeline.h  VImGuiLayer.cpp  VImGuiLayer.h  VMaterial.cpp  VMaterial.h  VRenderPass.cpp  VRenderPass.h  VRenderTexture.cpp  VRenderTexture.h  VRendererApi.cpp  VRendererApi.h  VShader.cpp  VShader.h  VUniformBuffer.cpp  VUniformBuffer.h  VVertexArray.cpp  VVertexArray.h
RoxEngine/src/Platform/Windows/: WWindow.cpp  WWindow.h
RoxEngine/src/RoxEngine/: RoxEngine.h
RoxEngine/src/RoxEngine/Core/: Logger.cpp  Logger.h  Platform.cpp  Platform.h  Thread.cpp  Thread.h  Window.cpp  Window.h
RoxEngine/src/RoxEngine/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  RendererApi.cpp  RendererApi.h  RendererApi_private.h  VertexArray.cpp  VertexArray.h
RoxEngine/src/RoxEngine/core/: Application.cpp  Application.h  Assert.h  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  KeyCodes.h  Logger.cpp  Logger.h  Metadata.h  MouseCodes.h  PlatformDetection.h  Window.cpp  Window.h
RoxEngine/src/RoxEngine/events/: Event.h
RoxEngine/src/RoxEngine/renderer/: Buffers.cpp  Buffers.h  CommandBuffer.cpp  CommandBuffer.h  Components.h  Framebuffer.cpp  Framebuffer.h  Graphics.cpp  Graphics.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Material.cpp  Material.h  Mesh.h  RenderPass.cpp  RenderPass.h  RenderTexture.cpp  RenderTexture.h  RendererApi.cpp  RendererApi.h  RendererPipeline.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
RoxEngine/src/RoxEngine/slang/: slang.cpp
Sandbox/: CMakeLists.txt  preprocessed_shader.glsl  your_shader_file.glsl
Sandbox/src/: main.cpp
submodules/: CMakeLists.txt
submodules/glad/include/glad/: gl.h
submodules/glad/src/: gl.c
